--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <section id="instant-quote" class="container content-section text-center">
         <h2>Get an Instant Quote Estimate</h2>
         <p>Want a quick idea of potential costs? Use this tool for an instant estimate. Scan the QR code with your phone or click the button below.</p>
-        <img src="images/randy-roofman-qr-code.jpg" alt="QR Code for Randy Roofman Instant Roofing Quote" class="qr-code">
+        <img src="randy-roofman-qr-code.jpg" alt="QR Code for Randy Roofman Instant Roofing Quote" class="qr-code">
         <a href="https://qrco.de/Randy-Instant-Quote" target="_blank" rel="noopener noreferrer" class="cta-button">Get Instant Quote Now</a>
         <p><small>Note: Instant quotes provide a preliminary estimate. A free, on-site inspection is recommended for an accurate, detailed proposal.</small></p>
     </section>
