--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <div class="header-contact">
-                <a href="tel:[Your Phone Number]">[Your Phone Number]</a>
+                <a href="tel:+17067672384">(706)767-2384</a>
             </div>
             <button id="mobile-menu-button" aria-label="Open Menu">&#9776;</button>
         </nav>
@@ -80,7 +80,7 @@
         <h2>Ready to Talk Roofing?</h2>
         <p>Whether you need an inspection, have questions about a repair, or are considering a replacement, I'm here to help. Reach out today for honest advice and a no-pressure conversation.</p>
         <div class="contact-info">
-             <p><strong>Phone:</strong> <a href="tel:[Your Phone Number]">[Your Phone Number]</a></p>
+             <p><strong>Phone:</strong> <a href="tel:+17067672384">(706)767-2384</a></p>
              <p><strong>Service Area:</strong> [Your Service Area] and surrounding communities.</p>
              <p>Or, click below to request your detailed Free Inspection!</p>
              <button id="open-inspection-modal-contact" class="cta-button">Request Free Inspection</button>
