--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Need a reliable roofer in [Your Service Area]? Randy Roofman offers expert roof repair, replacement, and free, no-obligation inspections. Get honest advice and quality workmanship. Contact Randy today!">
-    <title>Randy Roofman - Your Trusted Local Roofing Specialist | Free Inspections</title>
+    <meta name="description" content="Your trusted Northwest GA roofing experts for reliable roof repair, replacement & new installations. Licensed & Insured. Get your free, no-obligation quote today.>
+    <title>North GA Roofing Specialist | Free Inspections</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,8 +31,8 @@
 
     <section id="hero">
         <div class="hero-content container">
-            <h1>Protect Your Home with Expert Roofing by Randy Roofman</h1>
-            <p>Your trusted partner for reliable roof repairs, replacements, and maintenance in [Your Service Area]. Get peace of mind with quality materials and dedicated service.</p>
+            <h1>Protect Your Home with Expert Roofing</h1>
+            <p>Your trusted partner for reliable roof repairs, replacements, and maintenance in North GA. Get peace of mind with quality materials and dedicated service.</p>
             <button id="open-inspection-modal" class="cta-button">Get Your Free Inspection</button>
         </div>
     </section>
@@ -47,7 +47,7 @@
             </div>
             <div class="service-item">
                 <h3>Roof Repair</h3>
-                <p>From missing shingles to leak fixes, I handle repairs promptly and effectively to extend the life of your current roof and prevent further damage.</p>
+                <p>From missing shingles to leak fixes, we handle repairs promptly and effectively to extend the life of your current roof and prevent further damage.</p>
             </div>
             <div class="service-item">
                 <h3>Roof Replacement</h3>
@@ -61,10 +61,16 @@
     </section>
 
     <section id="about" class="container content-section">
-        <h2>Meet Randy Roofman</h2>
+        <h2>Meet Randy</h2>
         <div class="about-content">
-            <p>Hi, I'm Randy Roofman, your local, dedicated roofing professional. With years of experience in the [Your Service Area] community, I understand the unique challenges our weather can pose to your home's roof. My approach is simple: provide honest assessments, quality workmanship, and clear communication from start to finish.</p>
-            <p>I believe in treating every home like it's my own. That means using reliable materials, paying attention to detail during installation or repair, and ensuring you're completely satisfied with the result. I'm not just selling a roof; I'm providing security and peace of mind for you and your family. Let's talk about how I can help protect your biggest investment.</p>
+            <p>"Some Roofers think every house NEEDS a new roof. I'm not one to casually waste a perfectly good shingle. I collaborate with homeowners to see what solutions meets their needs, and it isn't always a brand-spanking new roof."</p>
+        </div>
+        <h2>Elite Partnership with CertainTeed</h2>
+        <div class="about-content">
+            <ul> CertainTeed "Master Installer"
+                <li>Only a select percent of a percent of installers authorized to offer CertainTeed's robust 10-year workmanship warranty</li>
+                <li>When other companies improperly install CertainTeed shingles, we are hired to correct those mistakes</li>
+            </ul>
         </div>
     </section>
 
@@ -81,7 +87,7 @@
         <p>Whether you need an inspection, have questions about a repair, or are considering a replacement, I'm here to help. Reach out today for honest advice and a no-pressure conversation.</p>
         <div class="contact-info">
              <p><strong>Phone:</strong> <a href="tel:+17067672384">(706)767-2384</a></p>
-             <p><strong>Service Area:</strong> [Your Service Area] and surrounding communities.</p>
+             <p><strong>Service Area:</strong> Northwest GA and OTP Atlanta Northwest.</p>
              <p>Or, click below to request your detailed Free Inspection!</p>
              <button id="open-inspection-modal-contact" class="cta-button">Request Free Inspection</button>
         </div>
