--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
         </div>
         <h2>Elite Partnership with CertainTeed</h2>
         <div class="about-content">
-            <ul> CertainTeed "Master Installer"
+            <h3>CertainTeed "Master Installer"</h3>
+            <ul>
                 <li>Only a select percent of a percent of installers authorized to offer CertainTeed's robust 10-year workmanship warranty</li>
                 <li>When other companies improperly install CertainTeed shingles, we are hired to correct those mistakes</li>
             </ul>
