--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Your trusted Northwest GA roofing experts for reliable roof repair, replacement & new installations. Licensed & Insured. Get your free, no-obligation quote today.>
+    <meta name="description" content="Your trusted Northwest GA roofing experts for reliable roof repair, replacement & new installations. Licensed & Insured. Get your free, no-obligation quote today.">
     <title>North GA Roofing Specialist | Free Inspections</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
