--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
 
     <header>
         <nav class="container">
-            <div class="logo">Randy Roofman</div>
+            <div class="logo">
+                <img
+                    src="RandyRoofmanPlaceholderLogo.png"
+                    alt="Randy Roofman"
+                    width=150
+                    height=50
+                >
+            </div>
             <ul>
                 <li><a href="#hero">Home</a></li>
                 <li><a href="#services">Services</a></li>
