--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <section id="about" class="container content-section">
         <h2>Meet Randy</h2>
         <div class="about-content">
-            <p>"Some Roofers think every house NEEDS a new roof. I'm not one to casually waste a perfectly good shingle. I collaborate with homeowners to see what solutions meets their needs, and it isn't always a brand-spanking new roof."</p>
+            <p>"Some Roofers think every house NEEDS a new roof. I'm not one to casually waste a perfectly good shingle. I collaborate with homeowners to see what solutions meet their needs, and it isn't always a brand-spanking new roof."</p>
         </div>
         <h2>Elite Partnership with CertainTeed</h2>
         <div class="about-content">
