--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <img
                     src="RandyRoofmanPlaceholderLogo.png"
                     alt="Randy Roofman"
-                    height=50
+                    width=100
                 >
             </div>
             <ul>
